MapperStruct, dto automaticos y rutas con openApi, pom.xml configuracion de maven para arquitectura hexagonal